--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -1,188 +1,188 @@
-.custom-projects-container{
+.custom-projects-container {
+  width: 100%;
+  padding: 0 3vw;
+
+  .categories-items {
+    position: relative;
+    overflow: hidden;
+    list-style-type: none;
+    padding: 0;
+    margin: 0 0.25rem;
+    text-align: center;
+    white-space: nowrap;
+
+    .categories-item {
+      display: inline-block;
+
+      .categories-item-link {
+        transition: 0.2s ease-in-out;
+        margin: 0 5px;
+        padding: 10px 15px;
+        background-color: transparent;
+        border: none;
+        text-transform: uppercase;
+        color: #959595;
+        font-size: 19px;
+        font-weight: $light;
+        text-decoration: none;
+        cursor: pointer;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      &.active {
+        .categories-item-link {
+          transition: 0.2s ease-in-out;
+          color: #6b6b6b;
+          font-weight: $black;
+        }
+      }
+    }
+  }
+
+  .divider {
     width: 100%;
-    padding: 0 3vw;
-    .categories-items{
-        position: relative;
-        overflow: hidden;
-        list-style-type: none;
-        padding: 0;
-        margin: 0 0.25rem;
-        text-align: center;
-        white-space: nowrap;
-        .categories-item{
-            display: inline-block;
-            .categories-item-link{
-                transition: 0.2s ease-in-out;
-                margin: 0 5px;
-                padding: 10px 15px;
-                background-color: transparent;
-                border: none;
-                text-transform: uppercase;
-                color: #959595;
-                font-size: 19px;
-                font-weight: $light;
-                text-decoration: none;
-                cursor: pointer;
-                &:focus{
-                    outline: none;
-                }
-            }
-            &.active{
-                .categories-item-link{
-                    transition: 0.2s ease-in-out;
-                    color: #6b6b6b;
-                    font-weight: $black;
-                }
-            }
-        }
+    padding: 0 0.25rem;
+    margin: 10px 0 30px 0;
+
+    .line {
+      border-bottom: 2px solid #959595;
     }
-    .divider{
-        width: 100%;
-        padding: 0 0.25rem;
-        margin: 10px 0 30px 0;
-        .line{
-            border-bottom: 2px solid #959595;
-        }
-    }
-    .ajax-spinner{
-        z-index: 99998;
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        margin-top: -15px;
-        margin-left: -15px;
-        width: 30px;
-        height: 30px;
-        border: 2px solid transparent;
-        border-bottom: 2px solid $secondary-bg;
-        border-radius: 50%;
-        animation: rotate 5s infinite;
+  }
+
+  .ajax-projects {
+    position: relative;
+    padding-bottom: 100px;
+
+    .no-projects {
+      text-transform: uppercase;
+      text-align: center;
+      color: #6b6b6b;
+      font-size: 20px;
     }
 
-    @keyframes rotate {
-        0% {
-            transform: rotate(0deg);
-        }
-        33% {
-            transform: rotate(900deg);
-        }
-        67% {
-            transform: rotate(-900deg);
-        }
-        100% {
-            transform: rotate(0deg);
-        }
-    }
-    .ajax-parent-overlay{
+    .keep-aspect {
+      margin: 0 auto;
+      width: 100%;
+      position: relative;
+
+      .gallery-item {
         position: relative;
-        .projects-loader{
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
+
+        .gallery-card {
+          transition: 0.1s ease-in-out;
+          transform: scale(1);
+          position: relative;
+          overflow: hidden;
+          margin: 0;
+          height: calc(100vw / 4);
+          min-height: 225px;
+          max-height: 325px;
+
+          .project-modal-btn {
             width: 100%;
-            background: $body-bg;
-            z-index: 1;
+            height: 100%;
+            background: transparent;
+            border: none;
+            padding: 0;
+
+            .multiple-images {
+              position: absolute;
+              top: 5%;
+              right: 5%;
+              width: 40px;
+            }
+
+            .gallery-item-img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+
+            &:focus {
+              outline: none;
+            }
+          }
+
+          .overlay {
+            pointer-events: none;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.7);
+
+            .overlay-title {
+              font-weight: $bold;
+            }
+
+            .overlay-text {
+              font-weight: $semi-bold;
+            }
+          }
+
+          &:active {
+            transition: 0.1s ease-in-out;
+            transform: scale(0.975);
+          }
         }
-        .ajax-projects{
-            position: relative;
-            .no-projects{
-                text-transform: uppercase;
-                text-align: center;
-                color: #6b6b6b;
-                font-size: 20px;
-            }
-            .keep-aspect{
-                margin: 0 auto;
-                width: 100%;
-                position: relative;
-                .gallery-item{
-                    position: relative;
-                    .gallery-card{
-                        transition: 0.1s ease-in-out;
-                        transform: scale(1);
-                        position: relative;
-                        overflow: hidden;
-                        margin: 0;
-                        height: calc(100vw / 4);
-                        min-height: 225px;
-                        max-height: 325px;
-                        .project-modal-btn{
-                            width: 100%;
-                            height: 100%;
-                            background: transparent;
-                            border: none;
-                            padding: 0;
-                            .multiple-images{
-                                position: absolute;
-                                top: 5%;
-                                right: 5%;
-                                width: 40px;
-                            }
-                            .gallery-item-img{
-                                width: 100%;
-                                height: 100%;
-                                object-fit: cover;
-                            }
-                            &:focus{
-                                outline: none;
-                            }
-                        }
-                        .overlay{
-                            pointer-events: none;
-                            position: absolute;
-                            width: 100%;
-                            height: 100%;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            text-align: center;
-                            background-color: rgba(255,255,255,0.7);
-                            .overlay-title{
-                                font-weight: $bold;
-                            }
-                            .overlay-text{
-                                font-weight: $semi-bold;
-                            }
-                        }
-                        &:active{
-                            transition: 0.1s ease-in-out;
-                            transform: scale(0.975);
-                        }
-                    }
-                    &:hover{
-                        cursor: pointer;
-                    }
-                }
-            }
-            .pagination-container{
-                padding: 50px 0;
-                position: relative;
-                .pagination{
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                    .page-item{
-                        .page-dir{
-                            transition: 0.2s ease-in-out;
-                            pointer-events: auto;
-                            font-size: 19px;
-                            font-weight: $light;
-                            color: $primary-font-color;
-                            &:hover{
-                                text-decoration: none;
-                            }
-                        }
-                        .active{
-                            transition: 0.2s ease-in-out;
-                            font-weight: $black;
-                        }
-                    }
-                }
-            }
+
+        &:hover {
+          cursor: pointer;
         }
+      }
     }
+
+    .pagination-container {
+      padding: 50px 0;
+      position: relative;
+
+      .pagination {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .page-item {
+          .page-dir {
+            transition: 0.2s ease-in-out;
+            pointer-events: auto;
+            font-size: 19px;
+            font-weight: $light;
+            color: $primary-font-color;
+
+            &:hover {
+              text-decoration: none;
+            }
+          }
+
+          .active {
+            transition: 0.2s ease-in-out;
+            font-weight: $black;
+          }
+        }
+      }
+    }
+  }
+
+}
+
+.load-more-projects-loader {
+  display: none;
+  position: relative;
+  height: 200px;
+  width: 100%;
+
+  .ajax-load-logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75px;
+  }
 }
