--- a/resources/assets/sass/_preloader.scss
+++ b/resources/assets/sass/_preloader.scss
@@ -1,26 +1,27 @@
 .preloader {
     z-index: 999999;
     width: 100vw;
-    height: 100%;
+    height: 120%;
     overflow: hidden;
     position: fixed;
     background: $body-bg;
-    margin-top: -180px;
+    margin-top: -200px;
 }
 
 .pageloader {
     z-index: 999999;
     width: 100vw;
-    height: 100%;
+    height: 120%;
     overflow: hidden;
     position: fixed;
     background: $body-bg;
-    margin-top: -180px;
+    margin-top: -200px;
     .load-logo {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        margin-left: -150px;
+        margin-top: -300px;
         width: 300px;
     }
 }
