--- a/resources/assets/sass/_landing.scss
+++ b/resources/assets/sass/_landing.scss
@@ -15,8 +15,8 @@
     }
     #filter{
         position: absolute;
-        height: calc(80vh - 123px);
         width: 100%;
+        height: 100%;
         top: 0;
         left: 0;
         overflow: hidden;
