--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,12 +1,23 @@
 //IMPORTING SASS FILES
 @import '~bootstrap/scss/bootstrap';
 @import 'variables';
+@import 'preloader';
 
 //GLOBAL
 body {
     margin: 0;
     background: $body-bg;
     font-family: $font-family;
+}
+
+img{
+    pointer-events: none;
+}
+
+@media print {
+    html, body {
+        display: none;  /* hide whole page */
+    }
 }
 
 ::-webkit-scrollbar {
@@ -24,47 +35,13 @@ body {
     }
 }
 
-@import 'preloader';
-
-.custom-container-nav{
-    max-width: 1620px !important;
-    margin: 0 auto;
-}
-
-.custom-container-content{
-    max-width: 1760px !important;
-    margin: 0 auto;
-}
-
-#content {
-    min-height: calc(100vh - 180px);
-    margin-top: 180px;
-}
-
-#index-content {
-    min-height: calc(100vh - 123px);
-    margin-top: 123px;
-}
+@import 'content';
 
 @import 'dynamic_elements';
 
 @import 'layout';
 
 @import 'landing';
-
-
-.selected {
-    border: 1px solid #000;
-    padding: 8px 5px 5px 5px;
-    p {
-        margin: 0;
-        font-size: 25px;
-        font-weight: $black;
-        text-transform: uppercase;
-        text-align: center;
-    }
-}
-
 
 @import 'grid';
 
