--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,8 @@
 //IMPORTING SASS FILES
 @import '~bootstrap/scss/bootstrap';
 @import 'variables';
+@import '~owl.carousel/dist/assets/owl.carousel.css';
+@import '~owl.carousel/dist/assets/owl.theme.default.css';
 @import 'preloader';
 
 //GLOBAL
