--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -1,183 +1,189 @@
 @media screen and (max-width: 1200px) {
-  .custom-wide-container {
-    .contact-details {
-      .contact-heading {
-        width: 85%;
-      }
+    .custom-wide-container {
+        .contact-details {
+            .contact-heading {
+                width: 85%;
+            }
 
-      .contact-description {
-        width: 90%;
-      }
+            .contact-description {
+                width: 90%;
+            }
+        }
     }
-  }
+
+    .project-modal {
+        .project-modal-content {
+            .project-modal-body {
+                .owl-carousel {
+                    .owl-gallery-item {
+                        .lazy-load {
+                            padding: 0;
+                        }
+                    }
+
+                    .owl-nav {
+                        .owl-prev {
+                            span {
+                                padding: 20px 20px 20px 5px;
+                            }
+                        }
+
+                        .owl-next {
+                            span {
+                                padding: 20px 5px 20px 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 992px) {
-  .preloader {
-    margin-top: -58px;
-  }
-  .pageloader {
-    margin-top: -58px;
-
-    .load-logo {
-      width: 100px;
-      margin-left: -50px;
-      margin-top: -150px;
+    .preloader {
+        margin-top: -58px;
     }
-  }
+    .pageloader {
+        margin-top: -58px;
 
-  .images {
-    #scene {
-      height: calc(80vh - 58px);
-    }
-
-    #over {
-      height: calc(80vh - 58px);
-    }
-  }
-
-  #content {
-    margin-top: 58px;
-    min-height: calc(100vh - 58px);
-  }
-
-  #index-content {
-    margin-top: 58px;
-    min-height: calc(100vh - 58px);
-  }
-
-  .hide-content-container {
-    height: calc(100vh - 58px);
-  }
-
-  .placement {
-    display: none;
-  }
-
-  .nav-container {
-    display: none;
-  }
-
-  .mobile-nav-container {
-    display: block;
-  }
-
-  .custom-projects-container {
-    .row {
-      .gallery-item {
-        .gallery-card {
-          height: calc(100vw / 2);
+        .load-logo {
+            width: 100px;
+            margin-left: -50px;
+            margin-top: -150px;
         }
-      }
     }
-  }
 
-  .project-modal {
-    .project-modal-content {
-      .project-modal-header{
-        .project-modal-title{
-          font-size: 16px;
-          .project-modal-project{
-            font-size: 14px;
-          }
+    .images {
+        #scene {
+            height: calc(80vh - 58px);
         }
-      }
-      .project-modal-body {
-        .carousel {
-          .carousel-indicators {
-            bottom: -20px;
-          }
 
-          .carousel-inner {
-            .carousel-item {
-              img {
-                padding: 0 20px 15px 20px;
-              }
+        #over {
+            height: calc(80vh - 58px);
+        }
+    }
+
+    #content {
+        margin-top: 58px;
+        min-height: calc(100vh - 58px);
+    }
+
+    #index-content {
+        margin-top: 58px;
+        min-height: calc(100vh - 58px);
+    }
+
+    .hide-content-container {
+        height: calc(100vh - 58px);
+    }
+
+    .placement {
+        display: none;
+    }
+
+    .nav-container {
+        display: none;
+    }
+
+    .mobile-nav-container {
+        display: block;
+    }
+
+    .custom-projects-container {
+        .row {
+            .gallery-item {
+                .gallery-card {
+                    height: calc(100vw / 2);
+                }
             }
-          }
-
-          .carousel-control-next {
-            padding: 0;
-          }
-
-          .carousel-control-prev {
-            padding: 0;
-          }
         }
-      }
-    }
-  }
-
-  .custom-wide-container {
-    .contact-details {
-      .contact-heading {
-        font-size: 35px;
-        width: 100%;
-      }
-
-      .contact-description {
-        width: 100%;
-      }
     }
 
-    .contact-form-section {
-      .contact-email-form {
-        .field {
-          margin: 10px 0;
-        }
+    .project-modal {
+        .project-modal-content {
+            .project-modal-header {
+                .project-modal-title {
+                    font-size: 16px;
 
-        .comment {
-          margin: 10px 0;
+                    .project-modal-project {
+                        font-size: 14px;
+                    }
+                }
+            }
         }
-      }
     }
-  }
 
-  footer {
-    padding: 50px 10vw;
+    .custom-wide-container {
+        .contact-details {
+            .contact-heading {
+                font-size: 35px;
+                width: 100%;
+            }
 
-    .content-container {
-      .footer-field {
-        .footer-social-link {
-          padding: 8px 16px 8px 0;
-          display: inline;
+            .contact-description {
+                width: 100%;
+            }
         }
-      }
+
+        .contact-form-section {
+            .contact-email-form {
+                .field {
+                    margin: 10px 0;
+                }
+
+                .comment {
+                    margin: 10px 0;
+                }
+            }
+        }
     }
-  }
+
+    footer {
+        padding: 50px 10vw;
+
+        .content-container {
+            .footer-field {
+                .footer-social-link {
+                    padding: 8px 16px 8px 0;
+                    display: inline;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 768px) {
-  .images {
-    #scene {
-      height: calc(70vh - 58px);
-    }
-
-    #over {
-      height: calc(70vh - 58px);
-    }
-  }
-
-  .type-selection-container {
-    .custom-content {
-      min-height: 30vh;
-      justify-content: center;
-    }
-  }
-
-  .custom-projects-container {
-    .ajax-parent-overlay {
-      .ajax-projects {
-        .keep-aspect {
-          .gallery-item {
-            .gallery-card {
-              height: calc(100vw / 2);
-              min-height: unset;
-            }
-          }
+    .images {
+        #scene {
+            height: calc(70vh - 58px);
         }
-      }
+
+        #over {
+            height: calc(70vh - 58px);
+        }
     }
-  }
+
+    .type-selection-container {
+        .custom-content {
+            min-height: 30vh;
+            justify-content: center;
+        }
+    }
+
+    .custom-projects-container {
+        .ajax-parent-overlay {
+            .ajax-projects {
+                .keep-aspect {
+                    .gallery-item {
+                        .gallery-card {
+                            height: calc(100vw / 2);
+                            min-height: unset;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
