fixed slug regenerate on edit, owl-carousel keyboard events

--- a/resources/assets/sass/_dynamic_elements.scss
+++ b/resources/assets/sass/_dynamic_elements.scss
@@ -1,7 +1,7 @@
 .to-top{
     position: fixed;
-    right: 0;
-    bottom: 0;
+    right: 5px;
+    bottom: 5px;
     width: 55px;
     height: 50px;
     z-index: 9999;
