--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -67,6 +67,7 @@
     #content {
         margin-top: 58px;
         min-height: calc(100vh - 58px);
+        overflow-x: hidden;
     }
 
     #index-content {
